main.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
                "type": "string",
                "defaultValue": "[resourceGroup().location]"
        },
        "Vm01Name": {
            "type": "string",
            "defaultValue": "WebVM01Prod"
        },
        "Vm02Name": {
            "type": "string",
            "defaultValue": "WebVM02Prod"
        },
        "AdminUsername": {"type": "string"},
        "AdminPassword": {"type": "securestring"}
    },
    "resources": [
        {
            "name": "[variables('StorageName')]",
            "type": "Microsoft.Storage/storageAccounts",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "properties": {
                "accountType": "[variables('StorageType')]"
            }
        },
        {
            "name": "[variables('Subnet01NsgName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "[parameters('location')]",
            "apiVersion": "2015-05-01-preview",
            "properties": {
                "securityRules": [
                 {
                    "name": "http_access",
                    "properties": {
                        "priority": 200,
                        "sourceAddressPrefix": "*",
                        "protocol": "Tcp",
                        "destinationPortRange": "80",
                        "access": "Allow",
                        "direction": "Inbound",
                        "sourcePortRange": "*",
                        "destinationAddressPrefix": "*"
                    }
                 },
                 {
                    "name": "ssh_access",
                    "properties": {
                        "priority": 300,
                        "sourceAddressPrefix": "*",
                        "protocol": "Tcp",
                        "destinationPortRange": "20",
                        "access": "Allow",
                        "direction": "Inbound",
                        "sourcePortRange": "*",
                        "destinationAddressPrefix": "*"
                    }
                 }
            ]
            }
        },
        {
            "name": "[variables('Subnet02NsgName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "[parameters('location')]",
            "apiVersion": "2015-05-01-preview",
            "properties": {
                "securityRules": [
                 {
                    "name": "http_access",
                    "properties": {
                        "priority": 200,
                        "sourceAddressPrefix": "*",
                        "protocol": "Tcp",
                        "destinationPortRange": "80",
                        "access": "Allow",
                        "direction": "Inbound",
                        "sourcePortRange": "*",
                        "destinationAddressPrefix": "*"
                    }
                 },
                 {
                    "name": "ssh_access",
                    "properties": {
                        "priority": 300,
                        "sourceAddressPrefix": "*",
                        "protocol": "Tcp",
                        "destinationPortRange": "20",
                        "access": "Allow",
                        "direction": "Inbound",
                        "sourcePortRange": "*",
                        "destinationAddressPrefix": "*"
                    }
                 }
            ]
            }
        },
        {
            "apiVersion": "2017-05-10",
            "name": "PublicIP01-creation",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri":"https://raw.githubusercontent.com/kornflejk/pracadomowa/master/linkedPIP.json"
                },
                "parameters": {
                    "location": {"value": "[parameters('location')]"},
                    "PIPname": {"value": "[variables('PublicIP01')]"}
                }
            }
        },
        {
            "apiVersion": "2017-05-10",
            "name": "PublicIP02-creation",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri":"https://raw.githubusercontent.com/kornflejk/pracadomowa/master/linkedPIP.json"
                },
                "parameters": {
                    "location": {"value": "[parameters('location')]"},
                    "PIPname": {"value": "[variables('PublicIP02')]"}
                }
            }
        },
        {
            "name": "[variables('Vnet01Name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[resourceID('Microsoft.Network/networkSecurityGroups/', variables('Subnet01NsgName'))]",
                "[resourceID('Microsoft.Network/networkSecurityGroups/', variables('Subnet02NsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('Vnet01Prefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('Vnet01Subnet1Name')]",
                        "properties": {
                            "addressPrefix": "[variables('Vnet01Subnet1Prefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Subnet01NsgName'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('Vnet01Subnet2Name')]",
                        "properties": {
                            "addressPrefix": "[variables('Vnet01Subnet2Prefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Subnet02NsgName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('Vm01NicName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[concat('Microsoft.Resources/deployments/','PublicIP01-creation')]",
                "[resourceID('Microsoft.Network/virtualNetworks/', variables('Vnet01Name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('PublicIP01'))]" },
                            "subnet": {"id": "[variables('Vm01SubnetRef')]"}
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('Vm02NicName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[concat('Microsoft.Resources/deployments/','PublicIP02-creation')]",
                "[resourceID('Microsoft.Network/virtualNetworks/', variables('Vnet01Name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('PublicIP02'))]" },
                            "subnet": {"id": "[variables('Vm02SubnetRef')]"}
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-05-10",
            "name": "VM01-deployment",
            "type": "Microsoft.Resources/deployments",
             "dependsOn": [
                "[resourceID('Microsoft.Storage/storageAccounts/', variables('StorageName'))]",
                "[resourceID('Microsoft.Network/networkInterfaces/', variables('Vm01NicName'))]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri":"https://raw.githubusercontent.com/kornflejk/pracadomowa/master/linkedVM.json"
                },
                "parameters": {
                    "VmName":{"value": "[parameters('Vm01Name')]"},
                    "AdminUsername":{"value": "[parameters('AdminUsername')]"},
                    "AdminPassword":{"value": "[parameters('AdminPassword')]"},
                    "location":{"value": "[parameters('location')]"},
                    "VMNIC": {"value": "[resourceId('Microsoft.Network/networkInterfaces',variables('Vm01NicName'))]"},
                    "StorageName": {"value": "[variables('StorageName')]"}
                }
            }
        },
        {
            "apiVersion": "2017-05-10",
            "name": "VM02-deployment",
            "type": "Microsoft.Resources/deployments",
             "dependsOn": [
                "[resourceID('Microsoft.Storage/storageAccounts/', variables('StorageName'))]",
                "[resourceID('Microsoft.Network/networkInterfaces/', variables('Vm02NicName'))]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri":"https://raw.githubusercontent.com/kornflejk/pracadomowa/master/linkedVM.json"
                },
                "parameters": {
                    "VmName":{"value": "[parameters('Vm02Name')]"},
                    "AdminUsername":{"value": "[parameters('AdminUsername')]"},
                    "AdminPassword":{"value": "[parameters('AdminPassword')]"},
                    "location":{"value": "[parameters('location')]"},
                    "VMNIC": {"value": "[resourceId('Microsoft.Network/networkInterfaces',variables('Vm02NicName'))]"},
                    "StorageName": {"value": "[variables('StorageName')]"}
                }
            }
        }
    ],
    "variables": {
        "Vnet01Name": "Vnet01-Web-Prod",
        "VnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('Vnet01Name'))]",
        "Vnet01Prefix": "10.0.0.0/16",
        "Vnet01Subnet1Name": "Subnet01",
        "Vnet01Subnet1Prefix": "10.0.1.0/24",
        "Vnet01Subnet2Name": "Subnet02",
        "Vnet01Subnet2Prefix": "10.0.2.0/24",
        "PublicIP01": "[concat(parameters('Vm01Name'), '-PIP')]",
        "PublicIP02": "[concat(parameters('Vm02Name'), '-PIP')]",
        "Subnet01NsgName": "[concat(variables('Vnet01Subnet1Name'), '-NSG')]",
        "Subnet02NsgName": "[concat(variables('Vnet01Subnet2Name'), '-NSG')]",
        "StorageName": "[concat('vmdatastorage', uniqueString(resourceGroup().id))]",
        "StorageType": "Standard_LRS",
        "Vm01SubnetRef": "[concat(variables('VnetID'), '/subnets/', variables('Vnet01Subnet1Name'))]",
        "Vm01NicName": "[concat(parameters('Vm01Name'), '-NIC')]",
        "Vm02SubnetRef": "[concat(variables('VnetID'), '/subnets/', variables('Vnet01Subnet2Name'))]",
        "Vm02NicName": "[concat(parameters('Vm02Name'), '-NIC')]"
    }
}
